Updated homepage design

--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
       Building innovative solutions with clean code and modern technologies
     </p>
     <div class="flex space-x-6">
-      <a href="#" class="social-icon text-2xl text-indigo-400 hover:text-white">
-        <i class="fab fa-linkedin"></i>
+      <a href="mailto:your-email@example.com" class="social-icon text-2xl text-indigo-400 hover:text-white" target="_blank" rel="noopener noreferrer">
+        <i class="fas fa-envelope"></i>
       </a>
-      <a href="#" class="social-icon text-2xl text-indigo-400 hover:text-white">
+      <a href="https://www.facebook.com/share/1HCeAVe8bC/?mibextid=wwXIfr" class="social-icon text-2xl text-indigo-400 hover:text-white" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/ahmed_.abogabal?igsh=cjMxenhhbjRqeTU%3D&utm_source=qr" class="social-icon text-2xl text-indigo-400 hover:text-white" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://ahmed-abo-gabal.github.io/abogabal.github.io/" class="social-icon text-2xl text-indigo-400 hover:text-white" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-github"></i>
       </a>
-      <a href="#" class="social-icon text-2xl text-indigo-400 hover:text-white">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="#" class="social-icon text-2xl text-indigo-400 hover:text-white">
-        <i class="fas fa-envelope"></i>
+      <a href="https://www.linkedin.com/in/ahmed-alham-abo-gabal-49b812350" class="social-icon text-2xl text-indigo-400 hover:text-white" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin"></i>
       </a>
     </div>
     <a href="#about" class="mt-12 px-8 py-3 bg-gradient-to-r from-indigo-600 to-purple-600 rounded-full font-medium hover:shadow-lg transition-all duration-300">
@@ -133,11 +136,11 @@
           </div>
           <div class="flex items-center">
             <i class="fas fa-briefcase text-indigo-400 mr-2"></i>
-            <span>3+ Years Experience</span>
+            <span>1 Years Experience</span>
           </div>
           <div class="flex items-center">
             <i class="fas fa-code text-indigo-400 mr-2"></i>
-            <span>10+ Projects</span>
+            <span>5 Projects</span>
           </div>
         </div>
       </div>
@@ -299,7 +302,7 @@
         </a>
       </div>
       <p class="text-gray-500">
-        &copy; 2023 Ahmed AboGabal. All rights reserved.
+        &copy; 2025 Ahmed AboGabal. All rights reserved.
       </p>
     </div>
   </footer>
